# relational-sdlc-ai-lab

./: .gitignore  BENCHMARK.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/content/: build_content.py  content-chunk-results.json  embed_content.py  run_content_chunk_ablation.py  source-cards.jsonl
data/corpus2/: build_corpus2.py  corpus2-baselines-results.json  corpus2-diff2test-results.json  corpus2-fusion-results.json  modifies_edges.jsonl  records.jsonl  run_corpus2_baselines.py  run_corpus2_diff2test.py  run_fusion_rerank.py
data/fixtures/: build_fixtures.py  edges.jsonl  records.jsonl
data/full/: build_full.py  chunk-results.json  edges.jsonl  embed_chunks.py  embed_full.py  full-results.json  run_chunk_ablation.py  run_full_ablation.py  split.json  (+1 more)
docs/: ablation-baselines-and-refutation.md  ablation-bootstrap-ci.md  ablation-chunking.md  ablation-code.md  ablation-code2.md  ablation-code3.md  ablation-content-chunk.md  ablation-corpus2-replication.md  ablation-crossrepo.md  ablation-diff2test-density.md  ablation-diff2test-retrieval.md  ablation-embed.md  ablation-finetune.md  ablation-gnn.md  ablation-graph-sweep.md  ablation-hardneg-confirm.md  ablation-label-precision.md  ablation-lora-sweep.md  ablation-negatives-sweep.md  ablation-real.md  ablation-rgcn.md  ablation-scale-lora.md  ablation-scale.md  ablation.md  architecture.md  benchmark-definition.md  full-text-dataset.md  graph-enrichment.md  ingest.md  operating-boundary.md  research-lifecycle.md  research-roadmap.md  roadmap-viz.md  roadmap.md  scale-dataset.md  slm-dryrun.md  tier2-dataset.md
schemas/: benchmark-query.schema.json  dataset-card.schema.json  edge.schema.json  experiment-card.schema.json  provenance.schema.json  record.schema.json  source-card.schema.json
tests/: conftest.py  test_baseline.py  test_baselines_refutation.py  test_bench.py  test_bootstrap_ci.py  test_chunking.py  test_code.py  test_code2.py  test_code3.py  test_content.py  test_corpus2_diff2test.py  test_diff2test_audit.py  test_diff2test_dense.py  test_diff2test_density.py  test_diff2test_strict.py  test_embed.py  test_finetune.py  test_full.py  test_graph.py  test_graph_sweep.py  test_graphsage.py  test_hardneg_confirm.py  test_ingest.py  test_jsonl_robustness.py  test_label_audit.py  test_metrics.py  test_model.py  test_multisplit.py  test_negatives_sweep.py  test_path_proximity.py  test_pilot.py  test_provenance.py  test_rgcn.py  test_scale.py  test_scale_lora.py  test_schemas.py  test_scrub.py  test_subgraph.py  test_synth.py  test_tier2.py  (+4 more)
(+217 files in other folders)
