[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relsdlc"
version = "0.1.0"
description = "Relational SDLC AI Lab — schema, validation, metrics, and baseline retrieval for relational-geometric learning over software lifecycle records."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "crbazevedo" }]
keywords = ["sdlc", "embeddings", "retrieval", "relational", "research"]
dependencies = [
  # jsonschema validates records, edges, and cards against schemas/*.schema.json.
  # Docs: https://python-jsonschema.readthedocs.io/  (MIT licensed)
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
relsdlc = "relsdlc.cli:main"

[project.urls]
Homepage = "https://github.com/crbazevedo/relational-sdlc-ai-lab"

[tool.hatch.build.targets.wheel]
packages = ["src/relsdlc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
