[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relsdlc"
version = "0.1.0"
description = "Relational SDLC AI Lab — schema, validation, metrics, and baseline retrieval for relational-geometric learning over software lifecycle records."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "crbazevedo" }]
keywords = ["sdlc", "embeddings", "retrieval", "relational", "research"]
dependencies = [
  # jsonschema validates records, edges, and cards against schemas/*.schema.json.
  # Docs: https://python-jsonschema.readthedocs.io/  (MIT licensed)
  "jsonschema>=4.0",
]

[project.optional-dependencies]
# numpy (BSD-3) powers the relation-aware model + ablation. Docs:
# https://numpy.org/doc/stable/  — kept optional so the core validate/bench path is numpy-free.
modeling = ["numpy>=1.24"]
# transformers + torch are needed ONLY to (re)generate the embedding cache
# (data/pilot/embed_pilot.py). Downstream ablations run on the committed cache with
# numpy alone, so CI never needs this heavy extra. Docs:
# https://huggingface.co/docs/transformers
embed = ["transformers>=4.40", "torch>=2.0", "numpy>=1.24"]
dev = ["pytest>=7", "numpy>=1.24"]

[project.scripts]
relsdlc = "relsdlc.cli:main"

[project.urls]
Homepage = "https://github.com/crbazevedo/relational-sdlc-ai-lab"

[tool.hatch.build.targets.wheel]
packages = ["src/relsdlc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
